<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="alarm">Alarm</string>
    <string name="settings">Settings</string>
    <string name="alerts">Alerts</string>
    <string name="API">"e5a7c0ff66b7ccce6336a786ae939c81"</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="click_into_map_to_add_location">Click into map to add location!</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="your_location">Your Location</string>
    <string name="temperature_unit">Temperature Unit</string>
   <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="meter_sec">meter/sec</string>
    <string name="miles_hour">miles/hour</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="get_current_location">Current Location</string>
    <string name="location_from_map">Select Location From Map</string>
    <string name="choose_location">Choose Location</string>
    <string name="ok">OK</string>
    <string name="Arabic">Arabic</string>
    <string name="imperial">imperial</string>
    <string name="add_this_location">Add this Location</string>
    <string name="sun">sun 20/3</string>
    <string name="no_favorite_location">No Favorite Location</string>
    <string name="no_alarm">No Alarm</string>
    <string name="select_date">select date</string>
    <string name="select_time">select time</string>
    <string name="to">To</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="from">From</string>

</resources>