<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="12dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/few_clouds2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/choose_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/locationRadioGroup"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <RadioButton
                android:id="@+id/rbCurrentLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_current_location"
                android:textSize="16sp" />


            <RadioButton
                android:id="@+id/rbLocationMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_from_map"
                android:textSize="16sp" />

        </RadioGroup>

        <ProgressBar
            android:id="@+id/progress"
            android:visibility="gone"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/ok"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>