<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="12dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/few_clouds2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/langRadioGroup"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <RadioButton
                android:id="@+id/rbArabic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:textSize="16sp" />


            <RadioButton
                android:id="@+id/rbEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textSize="16sp" />

        </RadioGroup>

    </LinearLayout>

</androidx.cardview.widget.CardView>