<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_drawer"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.weatherapp.home.view.HomFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_hom">
        <action
            android:id="@+id/action_homFragment_to_reminderFragment"
            app:destination="@id/alert"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_homFragment_to_favoriteFragment"
            app:destination="@id/favorite"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_home_to_settingsFragment"
            app:destination="@id/settings" />
    </fragment>
    <fragment
        android:id="@+id/favorite"
        android:name="com.example.weatherapp.favorite.view.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_favoriteFragment_to_homFragment"
            app:destination="@id/home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/alert"
        android:name="com.example.weatherapp.reminder.view.ReminderFragment"
        android:label="@string/alerts"
        tools:layout="@layout/fragment_reminder">
        <action
            android:id="@+id/action_reminderFragment_to_homFragment"
            app:destination="@id/home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/settings"
        android:name="com.example.weatherapp.settings.view.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_home"
            app:destination="@id/home" />
    </fragment>


</navigation>