<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="36sp"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    android:layout_gravity="start"
    tools:context=".ui.settings.view.SettingsFragment"
    android:gravity="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_location"
            android:textColor="@color/few_clouds2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">


            <TextView
                android:id="@+id/txtCurrentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="alexandria - egypt"
                android:textSize="16sp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/txtCurrentLocation"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="36sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_unit"
            android:textColor="@color/few_clouds2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/layoutUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">


            <TextView
                android:id="@+id/txtCurrentUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="Celsius"
                android:textSize="16sp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/txtCurrentUnit"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="36sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textColor="@color/few_clouds2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/layoutWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">


            <TextView
                android:id="@+id/txtCurrentWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="meter/sec"
                android:textSize="16sp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/txtCurrentWindSpeed"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="36sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="@color/few_clouds2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/layoutLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">


            <TextView
                android:id="@+id/txtCurrentLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="English"
                android:textSize="16sp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/txtCurrentLang"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>